@@ -1,3 +1,16 @@
+2013-06-05  Manjunath Matti <mmatti@caviumnetworks.com>
+
+	Backported libsanitizer testcases.
+
+	2012-11-14  Jakub Jelinek  <jakub@redhat.com>
+
+	gcc/testsuite
+	* lib/asan-dg.exp: New file.
+	* gcc.dg/asan/asan.exp: New file.
+	* g++.dg/dg.exp: Prune also asan tests.
+	* g++.dg/asan/asan.exp: New file.
+	* c-c++-common/asan/memcmp-1.c: New test.
+
 2013-06-04  Manjunath Matti <mmatti@caviumnetworks.com>
 
 	2012-11-13  Jakub Jelinek  <jakub@redhat.com>
